--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,30 @@
 version: '3.8'
 
 services:
+  # Jenkins CI/CD service
+  jenkins:
+    image: jenkins/jenkins:lts
+    container_name: mlops-jenkins
+    user: root
+    ports:
+      - "8080:8080"
+      - "50000:50000"
+    volumes:
+      - jenkins-data:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./:/workspace
+    networks:
+      - mlops-network
+    environment:
+      - DOCKER_HOST=unix:///var/run/docker.sock
+      - JAVA_OPTS=-Djenkins.install.runSetupWizard=false
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/login"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
+
   # Flask API service
   flask-api:
     build:
@@ -72,4 +96,5 @@ networks:
     driver: bridge
 
 volumes:
+  jenkins-data:
   prometheus-data:
